# liferay-nativity

./: .gitignore  CMakeLists.txt
windows/LiferayNativityShellExtensions/: CMakeLists.txt
windows/LiferayNativityShellExtensions/LiferayNativityContextMenus/: CMakeLists.txt  LiferayNativityContextMenus.vcxproj
windows/LiferayNativityShellExtensions/LiferayNativityOverlays/: CMakeLists.txt  DllMain.cpp  LiferayNativityOverlay.cpp  LiferayNativityOverlay.h  LiferayNativityOverlays.vcxproj  NativityOverlay.aps  NativityOverlayFactory.cpp  NativityOverlayFactory.h  OverlayConstants.h
windows/LiferayNativityShellExtensions/LiferayNativityUtil/: CMakeLists.txt  CommunicationSocket.cpp  CommunicationSocket.h  FileUtil.cpp  FileUtil.h  LiferayNativityUtil.vcxproj  UtilConstants.h  WinReg.hpp  iconconf.cpp  iconconf.h
windows/LiferayNativityShellExtensions/LiferayNativityUtil/inc/export_flags/: LiferayNativityUtilExport.h
